--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,11 +1,12 @@
 <div class="row align-items-center mt-3 mb-3">
-  <div class="col">
-    <h2>Счета</h2>
+  <div class="col-2">
+    <div class="h3">Счета</div>
   </div>
-  <div class="col">
-    <%= link_to 'Новый счет', new_invoice_path, class: 'btn btn-outline-primary' %>
+  <div class="col-8 px-0 row justify-content-center">
+    </div>
+  <div class="col-2 d-flex justify-content-end">
+    <%= link_to add_icon, new_invoice_path, class: 'btn btn-secondary btn-sm' %>
   </div>
-  <div class="col"></div>
 </div>
 <div class="table-responsive">
   <table class="table table-hover table-condensed">
