--- a/app/views/invoices/pdfsight.pdf.erb
+++ b/app/views/invoices/pdfsight.pdf.erb
@@ -91,7 +91,7 @@
        <% pr = @invoice.payplan %>
       <td align='center'>1</td>
       <td align="center"></td>
-      <td>Сервис k-comment.ru . Период продления <%= pr.period %></td>
+      <td>Сервис myappda.ru . Период продления <%= pr.period %></td>
       <td align='center'>шт</td>
       <td align='center'>1</td>
       <td align='right'><%= pr.price %></td>
