--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
             <a class="text-muted" href="+74997042035">88123392235</a>
           </li>
           <li class="list-group-item border-0 bg-transparent">
-            <a class="text-muted" href="mailto:k-comment.ru">support@ketago.com</a>
+            <a class="text-muted" href="mailto:myappda.ru">support@ketago.com</a>
           </li>
           <li class="list-group-item text-muted border-0 bg-transparent">MyAppDA<small> &copy; 2019-<%= Time.now.strftime("%Y" )%></small></li>
         </ul>
