--- a/app/views/user_mailer/favorite_setup_service_email.text.erb
+++ b/app/views/user_mailer/favorite_setup_service_email.text.erb
@@ -1,5 +1,5 @@
 
-Уважаемый пользователь сервиса k-comment.ru - избранные товары, <%= @user_email %>
+Уважаемый пользователь сервиса myappda.ru - избранные товары, <%= @user_email %>
 ====================================================================================
 
 Сообщаем Вам, что Ваши клиенты в данный момент не могут добавлять товары в Избранное и отправлять Избранное себе на почту.
@@ -18,5 +18,5 @@
 ___
 С уважением,
 служба поддержки
-K-comment.ru
+myappda.ru
 Сервисы для магазинов на платформе InSales.
