--- a/app/views/user_mailer/service_end_email.html.erb
+++ b/app/views/user_mailer/service_end_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3>Уважаемый пользователь сервиса K-comment, <%= @user_email %> !</h3>
+    <h3>Уважаемый пользователь сервиса myappda, <%= @user_email %> !</h3>
     <p>
       Срок оплаты Вашей регистрации истекает <strong>через 2 дня</strong>.
     </p>
@@ -14,7 +14,7 @@
     <p>Спасибо за сотрудничество, хорошего Вам дня!</p>
     <p>___</p>
     <p>С уважением, служба поддержки </p>
-    <p><a href="http://k-comment.ru"><strong>K-comment.ru</strong></a></p>
+    <p><a href="http://myappda.ru"><strong>myappda.ru</strong></a></p>
     <p>Сервис избранных товаров</p>
   </body>
 </html>
