--- a/app/views/user_mailer/test_welcome_email.text.erb
+++ b/app/views/user_mailer/test_welcome_email.text.erb
@@ -1,4 +1,4 @@
-Welcome to k-comment.ru!
+Welcome to myappda.ru!
 ===============================================
 
   Новая регистрация в приложении.
@@ -7,5 +7,5 @@ Welcome to k-comment.ru!
 ___
 С уважением,
 служба поддержки
-K-comment.ru
+myappda.ru
 Сервис избранных товаров
