--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,18 +1,8 @@
 <div class="row align-items-center mt-3 mb-3">
   <div class="col-2">
-    <div class="col-md-12 p-0">
-      <div class="h3">События</div>
-    </div>
+    <div class="h3">События</div>
   </div>
-  <div class="col-10 pl-0 pr-0 row">
-    <div class="col-2">
-      <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle btn-sm" data-bs-toggle="dropdown">Действия</button>
-        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <%= link_to 'Создать', new_event_path, class: 'dropdown-item' %>
-        </div>
-      </div>
-    </div>
+  <div class="col-8 px-0 row justify-content-center">
     <%= search_form_for @search, {class: 'form-inline col-10 pl-0 pr-0'} do |f| %>
       <div class="input-group input-group-sm">
       <%= f.select :casetype_in, Mycase::CASETYPE, { :prompt => 'Тип заявки'}, class: "form-select", style: "max-width: 180px;" %>
@@ -26,6 +16,9 @@
         <%= link_to arrow_clockwise_icon, events_path, class: 'btn btn-outline-dark' %>
       </div>
     <% end %>
+  </div>
+  <div class="col-2 d-flex justify-content-end">
+    <%= link_to add_icon, new_event_path, class: "btn btn-secondary btn-sm" %>
   </div>
 </div>
 
