--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
   <div class="col-10 pl-0 pr-0 row">
     <%= search_form_for @search, {class: 'form-inline col-12 pl-0 pr-0'} do |f| %>
       <div class="input-group input-group-sm">
-        <%= f.search_field :title_cont , placeholder: 'title', class: "form-control", style: "max-width: 180px;" %>
+        <%= f.search_field :title_cont , placeholder: 'Название', class: "form-control", style: "max-width: 180px;" %>
         <%= button_tag(type: 'submit', :class => "btn btn-outline-primary") do %><%= search_icon %><% end %>
         <%= link_to arrow_clockwise_icon, products_path, class: 'btn btn-outline-dark' %>
         <%= link_to trash_icon, delete_selected_products_path, class: 'btn btn-secondary', id: 'deleteAll', remote: true if current_admin%>
