--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,8 +33,7 @@
 </div>
 
 <div class="row">
-<div class="col-2 btn-group mt-5">
-<%# link_to 'Edit', edit_product_path(@product) , class: 'btn btn-success' %>
-<%= link_to 'Back', products_path, class: 'btn btn-outline-primary' %>
-</div>
+  <div class="col-1 btn-group mt-5">
+    <%= link_to 'Back', products_path, class: 'btn btn-outline-success btn-sm' %>
+  </div>
 </div>
