--- a/app/views/user_mailer/favorite_setup_service_email.html.erb
+++ b/app/views/user_mailer/favorite_setup_service_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3>Уважаемый пользователь сервиса K-comment, <%= @user_email %> !</h3>
+    <h3>Уважаемый пользователь сервиса myappda, <%= @user_email %> !</h3>
     <p>
       Сообщаем Вам, что Ваши клиенты в данный момент не могут добавлять товары в Избранное и отправлять Избранное себе на почту.
     </p>
@@ -21,7 +21,7 @@
     <p>Спасибо за сотрудничество, хорошего Вам дня!</p>
     <p>___</p>
     <p>С уважением, служба поддержки </p>
-    <p><a href="http://k-comment.ru"><strong>K-comment.ru</strong></a></p>
+    <p><a href="http://myappda.ru"><strong>myappda.ru</strong></a></p>
     <p>Сервисы для магазинов на платформе InSales.</p>
   </body>
 </html>
