--- a/app/views/user_mailer/insales_client_api_import.txt.erb
+++ b/app/views/user_mailer/insales_client_api_import.txt.erb
@@ -1,5 +1,5 @@
 
-Уважаемый пользователь сервиса k-comment.ru - избранные товары, <%= @user_email %>
+Уважаемый пользователь сервиса myappda.ru - избранные товары, <%= @user_email %>
 ====================================================================================
 
 Сообщаем Вам, что Ваши Клиенты импортировались в ваш магазин.
@@ -9,5 +9,5 @@
 ___
 С уважением,
 служба поддержки
-K-comment.ru
+myappda.ru
 Сервисы для магазинов на платформе InSales.
