--- a/app/views/user_mailer/service_end_email.text.erb
+++ b/app/views/user_mailer/service_end_email.text.erb
@@ -1,5 +1,5 @@
 
-Уважаемый пользователь сервиса k-comment.ru - избранные товары, <%= @user_email %>
+Уважаемый пользователь сервиса myappda.ru - избранные товары, <%= @user_email %>
 ====================================================================================
 
 
@@ -12,5 +12,5 @@
 ___
 С уважением,
 служба поддержки
-K-comment.ru
+myappda.ru
 Сервис избранных товаров
