--- a/app/views/user_mailer/test_welcome_email.html.erb
+++ b/app/views/user_mailer/test_welcome_email.html.erb
@@ -9,7 +9,7 @@
     <p>Thanks for joining and have a great day!</p>
     <p>___</p>
     <p>С уважением, служба поддержки </p>
-    <p><a href="http://k-comment.ru"><strong>K-comment.ru</strong></a></p>
+    <p><a href="http://myappda.ru"><strong>myappda.ru</strong></a></p>
     <p>Сервис избранных товаров</p>
   </body>
 </html>
