add page abandoned cart

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,8 +12,9 @@
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="/favorite">Избранные товары</a></li>
       <li><a class="dropdown-item" href="/restock">Собщить о поступлении</a></li>
-      <li><a class="dropdown-item" href="/message">Сообщения</a></li>
+      <li><a class="dropdown-item" href="/message">Триггеры</a></li>
       <li><a class="dropdown-item" href="/preorder">Предзаказ</a></li>
+      <li><a class="dropdown-item" href="/abandoned_cart">Брошенная корзина</a></li>
     </ul>
   </li>
     <li class="p-2 nav-item">
