--- a/app/views/home/preorder.html.erb
+++ b/app/views/home/preorder.html.erb
@@ -4,83 +4,11 @@
 <div class="row">
     <div class="display-6 text-center text-uppercase mb-5">Возможности</div>
     <ol class="list-group list-group-numbered">
-  <li class="list-group-item">собираем заявки клиентов с формы предзаказа товара с учетом его варианта</li>
-  <li class="list-group-item">создание заказа из заявки с комментарием в заказе</li>
-  <li class="list-group-item">возможность настроить и использовать доменную почту, например info@store.ru (есть настройки для yandex, mail, gmail, masterhost и др.)</li>
-</ol>
+        <li class="list-group-item">собираем заявки клиентов с формы предзаказа товара с учетом его варианта</li>
+        <li class="list-group-item">создание заказа из заявки с комментарием в заказе по API</li>
+        <li class="list-group-item">возможность настроить и использовать доменную почту, например info@store.ru (есть настройки для yandex, mail, gmail, masterhost и др.)</li>
+    </ol>
 </div>
 </section>
-<section class="page-section price pt-0">
-    <div class="row justi">
-        <div class="display-6 text-center text-uppercase mb-5">Стоимость</div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="card text-center ml-0 mr-0">
-            <div class="card-header">Бесплатно</div>
-                <div class="card-body">
-                <h4 class="card-title ">14 дней</h4>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">консультации</li>
-                    <li class="list-group-item">бесплатно 14 дней</li>
-                    <li class="list-group-item">полный функционал</li>
-                </ul>
-                </div>
-                <div class="card-body">
-                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-                    
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="card text-center ml-0 mr-0">
-            <div class="card-header text-white bg-success">Стандарт</div>
-                <div class="card-body">
-                <h4 class="card-title">1000 ₽/мес</h4>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">консультации</li>
-                    <li class="list-group-item">оплата за 1 мес</li>
-                    <li class="list-group-item">полный функционал</li>
-                </ul>
-                </div>
-                <div class="card-body">
-                <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-                
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="card text-center ml-0 mr-0">
-            <div class="card-header">Стандарт 6</div>
-                <div class="card-body">
-                <h4 class="card-title">900 ₽/мес</h4>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">скидка 10% (5400 ₽)</li>
-                    <li class="list-group-item">оплата за 6 мес</li>
-                    <li class="list-group-item">полный функционал</li>
-                </ul>
-                </div>
-                <div class="card-body">
-                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-                    
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="card text-center ml-0 mr-0">
-            <div class="card-header text-white bg-danger">Стандарт 12</div>
-                <div class="card-body">
-                <h4 class="card-title">800 ₽/мес</h4>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">скидка 20% (9600 ₽)</li>
-                    <li class="list-group-item">оплата за 12 мес</li>
-                    <li class="list-group-item">полный функционал</li>
-                </ul>
-                </div>
-                <div class="card-body">
-                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-</div>
+<%= render 'home/price_section'%>
+</div>  
