change user registration redirect

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -69,10 +69,10 @@ section {
 }
 // MAIN style changes
  .alert {
-   position: absolute;
-   min-width: 320px;
-   top: 50px;
-   right: 20px;
+  //  position: absolute;
+  //  min-width: 320px;
+  //  top: 50px;
+  //  right: 20px;
  }
   /* log_in and sign_up form style*/
 .users_sign_in, .users_sign_up, .users_password_new  {background: #eee;}
