--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,16 +1,17 @@
 
 <% if resource.errors.any? %>
-<div class="alert-devise">
-  <div class="<%= flash_class('alert') %> fade show">
-     <a href="#" class="close" data-dismiss="alert">&times;</a>
-     <%= I18n.t("errors.messages.not_saved", count: resource.errors.count, resource: resource.class.model_name.human.downcase) %>
-  </div>
-  <% resource.errors.full_messages.each do |message| %>
-  <div class="<%= flash_class('error') %> fade show">
-     <a href="#" class="close" data-dismiss="alert">&times;</a>
-     <%= message.html_safe %>
-  </div>
-  <% end %>
+<div id="alert_devise" class="position-fixed z-1 top-0 end-0 p-3 w-25">
+   <div class="<%= flash_class('alert') %>">
+      <button type="button" class="btn-close position-absolute top-50 end-0 translate-middle-y" data-bs-dismiss="alert" aria-label="Close"></button>
+      <div class="alert-message">  
+         <%= I18n.t("errors.messages.not_saved", count: resource.errors.count, resource: resource.class.model_name.human.downcase) %>
+      </div>
+   </div>
+   <% resource.errors.full_messages.each do |message| %>
+      <div class="<%= flash_class('error') %>">
+         <button type="button" class="btn-close position-absolute top-50 end-0 translate-middle-y" data-bs-dismiss="alert" aria-label="Close"></button>
+         <div class="alert-message">  <%= message.html_safe %></div>
+      </div>
+   <% end %>
 </div>
-
 <% end %>
